--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 requests~=2.28.1
-selenium==4.7.2 # 4.1.0 for touch_actions
-setuptools==65.6.3
-selenium_profiles
-pillow~=9.4
+selenium==4.8.3 # 4.1.0 for touch_actions
+setuptools==67.6.1
+selenium_profiles==2.2.5.5
+pillow==9.5.0
 trio
 websockets
