--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests~=2.28.1
-selenium==4.8.3 # 4.1.0 for touch_actions
-setuptools==67.6.1
-selenium_profiles==2.2.5.5
+requests==2.31.0
+selenium==4.10.0
+setuptools==68.0.0
+selenium_profiles==2.2.6
 pillow==9.5.0
 trio
-websockets
+websockets==11.0.3
