--- a/src/selenium_injector/files/extension/manifest_2.json
+++ b/src/selenium_injector/files/extension/manifest_2.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "selenium-injector",
+  "name": "selenium-injector-mv2",
   "version": "1.0",
   "description": "executes code passed from selenium",
   "author": "aurin.aegerter@stud.gymthun.ch",
@@ -54,17 +54,14 @@
     "privacy",
     "processes",
     "proxy",
-    "scripting",
     "search",
     "sessions",
-    "signedInDevices",
     "storage",
     "system.cpu",
     "system.display",
     "system.memory",
     "system.storage",
     "tabCapture",
-    "tabGroups",
     "tabs",
     "topSites",
     "tts",
@@ -75,6 +72,5 @@
     "webNavigation",
     "webRequest",
     "webRequestBlocking"
-  ],
-  "host_permissions": ["<all_urls>"]
+  ]
 }
